--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 </div>
                 <ul class="artical-ul">
                     <li class="top-1" id="top-1">
-                        <p>运动出点汗,更好来谈判</p>
+                        <p class="top-p">运动出点汗,更好来谈判</p>
                         <div id="box">
                             <span class="pic"></span>
                             <span class="text">撞上去的事情人类已经干过了。。深度撞击号(英语:Deep Impact)是美国国家</span>
@@ -93,10 +93,48 @@
                 <span>小组热帖</span>
                 <span class="hot-icon"></span>
             </div>
+
+            <div class="artical">
+                <div class="tabs">
+                    <div class="on">科技</div>
+                    <div>生活</div>
+                    <div>人文</div>
+                    <div>自然</div>
+                </div>
+                <ul class="artical-ul">
+                    <li class="top-1" id="top-1">
+                        <p class="top-p">运动出点汗,更好来谈判</p>
+                        <div id="box">
+                            <span class="pic" id="pic"></span>
+                            <span class="text">撞上去的事情人类已经干过了。。深度撞击号(英语:Deep Impact)是美国国家</span>
+                        </div>
+                    </li>
+                    <li>
+                        <a href="javascript:;">运动出点汗,更好来谈判</a>
+                    </li>
+                    <li>
+                        <a href="javascript:;">运动出点汗,更好来谈判</a>
+                    </li>
+                    <li>
+                        <a href="javascript:;">运动出点汗,更好来谈判</a>
+                    </li>
+                    <li>
+                        <a href="javascript:;">运动出点汗,更好来谈判</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- back to top -->
+            <div class="back-top">
+                <a href="javascript:;" class="back-pic">回到顶部</a>
+            </div>
         </section>
         <footer class="foot">
-            <a href="javascript:;" class="foot-pc">PC版</a>
-            <a href="javascript:;" class="foot-app">移动应用</a>
+            <a href="javascript:;" class="foot-pc">
+                <span class="foot-p1">PC版</span>
+            </a>
+            <a href="javascript:;" class="foot-app">
+                <span class="foot-p2">移动应用</span>
+            </a>
         </footer>
     </div>
     
